# KL_custom_listings_server

./: .gitignore  config.py  pyproject.toml  readme.md
buildDeploy/: build_lambda.sh  deploy.sh  deploy_config.json  deploy_lambda.py
core/: s3.py
core/types/: custom_lists.py  film_listings.py
handlers/custom_lists/: assign_films_to_list_handler.py  create_curator_handler.py  create_custom_list_handler.py  delete_list_handler.py  entrypoint.py  get_available_films_handler.py  get_curators_handler.py  get_custom_lists_handler.py  remove_film_from_list_handler.py  update_list_film_caption_handler.py  update_list_handler.py
local_testing/: test_get_kinologue_lists.py  url_lambda_invoke.py
tests/e2e/: test_create_curator.py  test_create_custom_list.py  test_delete_list.py  test_get_curators.py  test_get_custom_lists.py
tests/fixtures/create_curator/: create_curator_e2e_valid.json  create_curator_empty_curator.json  create_curator_invalid_chars.json  create_curator_missing_curator.json  create_curator_too_short.json  create_curator_uppercase.json  create_curator_valid.json  create_curator_with_hyphens.json
tests/fixtures/create_custom_list/: create_custom_list_bad_end_date.json  create_custom_list_bad_start_date.json  create_custom_list_empty_caption.json  create_custom_list_missing_all_fields.json  create_custom_list_missing_curator.json  create_custom_list_missing_list_name.json  create_custom_list_valid.json
tests/fixtures/delete_list/: delete_list_setup.json  delete_list_valid.json
tests/unit/: test_create_curator.py  test_create_custom_list.py
(+2 files in other folders)
