[project]
name = "kl-custom-listings-server"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
  "boto3",
  "rich",
  "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "handlers*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
